chore: retire the JavaFX desktop client so the product only ships on the web (#66)
Every product change had to be built twice, once in the JavaFX client here and
once in the web edition in PatrickRobelWeb. Patrick only uses the web and phone
experience, so the desktop half was pure duplicated cost. This removes it.

Deleted:
- the whole `client/` module (JavaFX app, scenes, tables, auto-updater,
  browser-mediated sign in) and its entry in the parent POM
- `build-installers.ps1`, `.github/workflows/build-installers.yml`,
  `scripts/installer-modules.txt` and `scripts/check-installer-modules.ps1`,
  so no merge publishes an installer any more
- `scripts/capture-app.ps1` and `scripts/snap.ps1`, which only ever screenshotted
  the client window
- `dk.dtu.shared.Config`, which held nothing but client-side configuration; the
  api module never referenced it, so `shared` is now just `TaskStatus`

Kept on purpose:
- `scripts/grab-window.ps1`, generalised with a `-TitleMatch` parameter. It is
  the reference PrintWindow implementation the global instructions point at as
  the safe alternative to synthetic input, so it outlives the app it was written
  for.
- the website's desktop handoff endpoints, which are what let an already
  installed v2.0.8 copy still sign in. They live in the other repo and are
  untouched.
- v2.0.8 on the Releases page. An installed client keeps working against this
  API, which did not change; it simply stops receiving updates.

Docs rewritten rather than patched: the "UI work covers BOTH clients" rule in
CLAUDE.md is now "UI work happens in the website repo", the module layout, build,
test and packaging sections lost their client halves, and the version register
reserves V8 for the TodoTinder schema in #56. `Dockerfile.api` no longer copies
`client/pom.xml`, and `ci.yml` lost the jpackage prep and the installer guard.

Verified: `mvn -B clean verify` green on the two remaining modules, the
production `Dockerfile.api` image builds, and that image b